--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                     <div class="about-details">
                         <h2 class="section-title">About Us</h2>
                         <p class="text">
-                            Longfort Consulting offers clinical trial expertize to obtain
-                            <b>regulatory compliance</b> in a timeboxed way.
+                            Longfort Consulting offers regulatory expertize to reach
+                            clinical trial approval in a time & quality controlled way.
                         </p>
                         <p class="text">
                             Benefits our <b>guidance</b> in oncology, immunotherapy, rare diseases, child
@@ -72,8 +72,7 @@
                         </p>
                         <p class="text">
                             Conduct robust <b>clinical trials</b> using <b>bulletproof</b> protocols and a tailored
-                            document set to obtain <b>right first time</b> international regulatory
-                            <b>compliance</b> and scientific validity.
+                            document set to obtain <b>right first time</b> authorities approval.
                         </p>
                         <span class="buttons">
                             <a href="#services" class="button">&darr; Learn more</a>
@@ -84,44 +83,49 @@
             <section id="services" class="about-section">
                 <div class="section-content">
                     <div class="about-details">
-                        <h2 class="section-title">Services<!--Study Design & Protocol Development--></h2>
+                        <h2 class="section-title">Services</h2>
                         <div>
                             <div style="padding: 32px 0 0px 10px">
-                                <a class="text" style="font-size: 1rem; color: #3d7489"
-                                    >Regulatory strategy (Regulatory lead)</a
-                                >
+                                <a class="text" style="font-size: 1.2rem; color: #3d7489">Regulatory strategy (Regulatory lead)</a>
                             </div>
                             <div style="padding: 0 0 0px 10px">
-                                <a class="text">&#9634; National and European submissions (EU CTR, UK).</a>
+                                <a class="text">&#9634; Worldwide submissions</a>
+                            </div>
+                            <div style="padding: 0 0 0px 10px">
+                                <a class="text">&#9634; Complex trials strategy</a>
                             </div>
                             <div style="padding: 0 0 28px 10px">
-                                <a class="text"
-                                    >&#9634; Compliance strategy for complex projects (oncology, rare diseases,
-                                    etc.).</a
-                                >
+                                <a class="text">&#9634; Readiness audit</a>
                             </div>
                             <div style="padding: 0 0 0px 10px">
-                                <a class="text" style="font-size: 1rem; color: #3d7489"
-                                    >Operational coord. (Start-up)</a
-                                ><br />
+                                <a class="text" style="font-size: 1.2rem; color: #3d7489">Operational coord. (Start-up)</a>
                             </div>
                             <div style="padding: 0 0 0px 10px">
-                                <a class="text">&#9634; Activation of investigator centers.</a>
+                                <a class="text">&#9634; Sites identification and selection</a>
                             </div>
                             <div style="padding: 0 0 0px 10px">
-                                <a class="text">&#9634; Contract and budget negotiation.</a>
+                                <a class="text">&#9634; ICF adaptation.</a>
+                            </div>
+                            <div style="padding: 0 0 0px 10px">
+                                <a class="text">&#9634; CA and EC submissions</a>
+                            </div>
+                            <div style="padding: 0 0 0px 10px">
+                                <a class="text">&#9634; Contract and budget negotiation</a>
                             </div>
                             <div style="padding: 0 0 28px 10px">
-                                <a class="text">&#9634; Coordination of multi-center projects (EU, UK, US, LATAM).</a>
+                                <a class="text">&#9634; Sites activation</a>
                             </div>
                             <div style="padding: 0 0 0px 10px">
-                                <a class="text" style="font-size: 1rem; color: #3d7489">Support</a>
+                                <a class="text" style="font-size: 1.2rem; color: #3d7489">Support</a>
                             </div>
                             <div style="padding: 0 0 0px 10px">
-                                <a class="text">&#9634; Startup project management.</a>
+                                <a class="text">&#9634; Start-up projects</a>
                             </div>
-                            <div style="padding: 0 0 28px 10px">
-                                <a class="text">&#9634; Train and diagnose your Clinical Ops & Regulatory teams.</a>
+                            <div style="padding: 0 0 0px 10px">
+                                <a class="text">&#9634; Diagnose your Clinical Ops</a>
+                            </div>
+                             <div style="padding: 0 0 28px 10px">
+                                <a class="text">&#9634; Train your Regulatory teams</a>
                             </div>
                             <span class="buttons">
                                 <a href="#contact" class="button">&darr; Leave a message</a>
@@ -158,26 +162,15 @@
                             <label for="message">Message</label>
                             <textarea id="message" name="Message" rows="5" required></textarea>
                         </div>
-                        <input type="checkbox" name="botcheck" class="hidden" style="display: none" />
+                        <input type="checkbox" name="botcheck" class="hidden" style="display: none"/>
                         <button type="submit" class="button">Send</button>
                     </form>
                     <div class="social-link-list">
-                        <a
-                            href="mailto:sabrina.guittard@longfort-consulting.com?subject=Request for information"
-                            class="social-link"
-                            ><i class="fa-solid fa-envelope"></i> email</a
-                        >
-                        <a
-                            href="https://www.linkedin.com/in/sabrina-guittard-3106272b"
-                            target="_blank"
-                            class="social-link"
-                            >Linked<i class="fa-brands fa-linkedin"></i
-                        ></a>
-                        <a href="tel:+33680012884" class="social-link"
-                            ><i class="fa-brands fa-whatsapp"></i> +33 680012884</a
-                        >
+                        <a href="mailto:sabrina.guittard@longfort-consulting.com?subject=Request for information" class="social-link"><i class="fa-solid fa-envelope"></i> email</a>
+                        <a href="https://www.linkedin.com/in/sabrina-guittard-3106272b" target="_blank" class="social-link">Linked<i class="fa-brands fa-linkedin"></i></a>
+                        <a href="tel:+33680012884" class="social-link"><i class="fa-brands fa-whatsapp"></i> +33 680012884</a>
                     </div>
-                    <p class="text" style="margin-top: 20px">Longfort Consulting<br />Toulouse, France</p>
+                    <p class="text" style="margin-top: 20px">Longfort Consulting<br/>Toulouse, France</p>
                 </div>
             </section>
             <section id="blog" class="blog-section">
