--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
                     <div class="about-details">
                         <h2 class="section-title">About Us</h2>
                         <p class="text">
-                            Longfort Consulting offers regulatory expertize to reach
-                            clinical trial approval in a time & quality controlled way.
+                            Longfort Consulting offers regulatory expertise to secure
+                            clinical trial approval in a timely and quality-controlled manner.
                         </p>
                         <p class="text">
-                            Benefits our <b>guidance</b> in oncology, immunotherapy, rare diseases, child
-                            treatment and gene therapy domains to achieve successful trial outcomes.
+                            Benefit from our <b>guidance</b> in oncology, immunotherapy, rare diseases,
+                            pediatrics, and gene therapy to achieve successful trial outcomes.
                         </p>
                         <p class="text">
-                            Conduct robust <b>clinical trials</b> using <b>bulletproof</b> protocols and a tailored
-                            document set to obtain <b>right first time</b> authorities approval.
+                            Conduct robust <b>clinical trials</b> using <b>bulletproof</b> protocols and
+                            a tailored document set to obtain <b>first-time approval</b> from regulatory authorities.
                         </p>
                         <span class="buttons">
                             <a href="#services" class="button">&darr; Learn more</a>
@@ -202,3 +202,4 @@
         <script src="script.js"></script>
     </body>
 </html>
+
