--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="about-details">
                         <h2 class="section-title">Services</h2>
                         <div>
-                            <div style="padding: 32px 0 0px 10px">
+                            <div style="padding: 32px 0 8px 10px">
                                 <a class="text" style="font-size: 1.2rem; color: #3d7489">Regulatory strategy (Regulatory lead)</a>
                             </div>
                             <div style="padding: 0 0 0px 10px">
@@ -97,35 +97,35 @@
                             <div style="padding: 0 0 28px 10px">
                                 <a class="text">&#9634; Readiness audit</a>
                             </div>
-                            <div style="padding: 0 0 0px 10px">
-                                <a class="text" style="font-size: 1.2rem; color: #3d7489">Operational coord. (Start-up)</a>
+                            <div style="padding: 0 0 8px 10px">
+                                <a class="text" style="font-size: 1.2rem; color: #3d7489">Operational coord. (Trial Start-up)</a>
                             </div>
                             <div style="padding: 0 0 0px 10px">
-                                <a class="text">&#9634; Sites identification and selection</a>
+                                <a class="text">&#9634; Sites Identification and Selection</a>
                             </div>
                             <div style="padding: 0 0 0px 10px">
-                                <a class="text">&#9634; ICF adaptation.</a>
+                                <a class="text">&#9634; ICF Adaptation.</a>
                             </div>
                             <div style="padding: 0 0 0px 10px">
-                                <a class="text">&#9634; CA and EC submissions</a>
+                                <a class="text">&#9634; CA and EC Submissions</a>
                             </div>
                             <div style="padding: 0 0 0px 10px">
-                                <a class="text">&#9634; Contract and budget negotiation</a>
+                                <a class="text">&#9634; Contract and Budget Negotiations</a>
                             </div>
                             <div style="padding: 0 0 28px 10px">
-                                <a class="text">&#9634; Sites activation</a>
+                                <a class="text">&#9634; Sites Activation</a>
                             </div>
-                            <div style="padding: 0 0 0px 10px">
+                            <div style="padding: 0 0 8px 10px">
                                 <a class="text" style="font-size: 1.2rem; color: #3d7489">Support</a>
                             </div>
                             <div style="padding: 0 0 0px 10px">
-                                <a class="text">&#9634; Start-up projects</a>
+                                <a class="text">&#9634; Start-up Project Lead</a>
                             </div>
                             <div style="padding: 0 0 0px 10px">
-                                <a class="text">&#9634; Diagnose your Clinical Ops</a>
+                                <a class="text">&#9634; Clinical Operations Assessment</a>
                             </div>
                              <div style="padding: 0 0 28px 10px">
-                                <a class="text">&#9634; Train your Regulatory teams</a>
+                                <a class="text">&#9634; Regulatory Team Training</a>
                             </div>
                             <span class="buttons">
                                 <a href="#contact" class="button">&darr; Leave a message</a>
@@ -202,4 +202,5 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
