--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
                                 <a class="text" style="font-size: 1.2rem; color: #3d7489">Regulatory strategy (Regulatory lead)</a>
                             </div>
                             <div style="padding: 0 0 0px 10px">
-                                <a class="text">&#9634; Worldwide submissions</a>
+                                <a class="text">&#9634; Worldwide Submissions</a>
                             </div>
                             <div style="padding: 0 0 0px 10px">
-                                <a class="text">&#9634; Complex trials strategy</a>
+                                <a class="text">&#9634; Complex Trial Strategy</a>
                             </div>
                             <div style="padding: 0 0 28px 10px">
-                                <a class="text">&#9634; Readiness audit</a>
+                                <a class="text">&#9634; Readiness Audits</a>
                             </div>
                             <div style="padding: 0 0 8px 10px">
                                 <a class="text" style="font-size: 1.2rem; color: #3d7489">Operational coord. (Trial Start-up)</a>
@@ -119,7 +119,7 @@
                                 <a class="text" style="font-size: 1.2rem; color: #3d7489">Support</a>
                             </div>
                             <div style="padding: 0 0 0px 10px">
-                                <a class="text">&#9634; Start-up Project Lead</a>
+                                <a class="text">&#9634; Start-up Project Support</a>
                             </div>
                             <div style="padding: 0 0 0px 10px">
                                 <a class="text">&#9634; Clinical Operations Assessment</a>
@@ -202,5 +202,6 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
