--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                 <a class="text">&#9634; Sites Identification and Selection</a>
                             </div>
                             <div style="padding: 0 0 0px 10px">
-                                <a class="text">&#9634; ICF Adaptation.</a>
+                                <a class="text">&#9634; ICF Adaptation</a>
                             </div>
                             <div style="padding: 0 0 0px 10px">
                                 <a class="text">&#9634; CA and EC Submissions</a>
@@ -202,6 +202,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
