--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         </p>
                         <p class="text">
                             Benefit from our <b>guidance</b> in oncology, immunotherapy, rare diseases,
-                            pediatrics, and gene therapy to achieve successful trial outcomes.
+                            pediatrics, and gene therapy to achieve <b>successful</b> trial outcomes.
                         </p>
                         <p class="text">
                             Conduct robust <b>clinical trials</b> using <b>bulletproof</b> protocols and
@@ -202,6 +202,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
