--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <h2 class="section-title">Services</h2>
                         <div>
                             <div style="padding: 32px 0 8px 10px">
-                                <a class="text" style="font-size: 1.2rem; color: #3d7489">Regulatory strategy (Regulatory lead)</a>
+                                <a class="text" style="font-size: 1.2rem; color: #3d7489">Regulatory Affairs strategy</a>
                             </div>
                             <div style="padding: 0 0 0px 10px">
                                 <a class="text">&#9634; Worldwide Submissions</a>
@@ -202,6 +202,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
