--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
                     <div class="about-details">
                         <h2 class="section-title">About Us</h2>
                         <p class="text">
-                            Longfort Consulting offers regulatory expertise to secure
-                            clinical trial approval in a timely and quality-controlled manner.
+                            Longfort Consulting offers regulatory expertise to secure clinical trial approval in a
+                            timely and quality-controlled manner.
                         </p>
                         <p class="text">
-                            Benefit from our <b>guidance</b> in oncology, immunotherapy, rare diseases,
-                            pediatrics, and gene therapy to achieve <b>successful</b> trial outcomes.
+                            Benefit from our <b>guidance</b> in oncology, immunotherapy, rare diseases, pediatrics, and
+                            gene therapy to achieve <b>successful</b> trial outcomes.
                         </p>
                         <p class="text">
-                            Conduct robust <b>clinical trials</b> using <b>bulletproof</b> protocols and
-                            a tailored document set to obtain <b>first-time approval</b> from regulatory authorities.
+                            Conduct robust <b>clinical trials</b> using <b>bulletproof</b> protocols and a tailored
+                            document set to obtain <b>first-time approval</b> from regulatory authorities.
                         </p>
                         <span class="buttons">
                             <a href="#services" class="button">&darr; Learn more</a>
@@ -98,7 +98,9 @@
                                 <a class="text">&#9634; Readiness Audits</a>
                             </div>
                             <div style="padding: 0 0 8px 10px">
-                                <a class="text" style="font-size: 1.2rem; color: #3d7489">Operational coord. (Trial Start-up)</a>
+                                <a class="text" style="font-size: 1.2rem; color: #3d7489">
+                                    Operational coord. (Trial Start-up)
+                                </a>
                             </div>
                             <div style="padding: 0 0 0px 10px">
                                 <a class="text">&#9634; Sites Identification and Selection</a>
@@ -124,7 +126,7 @@
                             <div style="padding: 0 0 0px 10px">
                                 <a class="text">&#9634; Clinical Operations Assessment</a>
                             </div>
-                             <div style="padding: 0 0 28px 10px">
+                            <div style="padding: 0 0 28px 10px">
                                 <a class="text">&#9634; Regulatory Team Training</a>
                             </div>
                             <span class="buttons">
@@ -142,43 +144,46 @@
                 <div class="about-details"></div>
             </section>
             <section id="contact" class="about-section">
-                <div class="about-details">
-                    <h2 class="section-title">Contact</h2>
-                    <p class="text">
-                        Have a question? Please fill out the form below,<br />
-                        or feel free to contact me directly.
-                    </p>
-                    <form action="https://api.web3forms.com/submit" method="POST" class="styled-form">
-                        <input type="hidden" name="access_key" value="9aa4c03f-af54-404b-b9f9-ecf3e5fa28b5" />
-                        <div class="form-group">
-                            <label for="name">Name</label>
-                            <input type="text" id="name" name="Name" required />
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Email</label>
-                            <input type="email" id="email" name="email" required />
-                        </div>
-                        <div class="form-group">
-                            <label for="message">Message</label>
-                            <textarea id="message" name="Message" rows="5" required></textarea>
-                        </div>
-                        <input type="checkbox" name="botcheck" class="hidden" style="display: none"/>
-                        <button type="submit" class="button">Send</button>
-                    </form>
-                    <div class="social-link-list">
-                        <a href="mailto:sabrina.guittard@longfort-consulting.com?subject=Request for information" class="social-link"><i class="fa-solid fa-envelope"></i> email</a>
-                        <a href="https://www.linkedin.com/in/sabrina-guittard-3106272b" target="_blank" class="social-link">Linked<i class="fa-brands fa-linkedin"></i></a>
-                        <a href="tel:+33680012884" class="social-link"><i class="fa-brands fa-whatsapp"></i> +33 680012884</a>
-                    </div>
-                    <p class="text" style="margin-top: 20px">Longfort Consulting<br/>Toulouse, France</p>
-                </div>
-            </section>
-            <section id="blog" class="blog-section">
                 <div class="section-content">
-                    <h2 class="section-title">Blog</h2>
-                    <!-- Elfsight LinkedIn Feed | Untitled LinkedIn Feed -->
-                    <script src="https://elfsightcdn.com/platform.js" async></script>
-                    <div class="elfsight-app-37e8d025-f183-418a-832d-4a11719773ef" data-elfsight-app-lazy></div>
+                    <div class="about-details">
+                        <h2 class="section-title">Contact</h2>
+                        <div>
+                            <p class="text">
+                                Have a question? Please fill out the form below,<br>
+                                or feel free to contact me directly.
+                            </p>
+                            <form action="https://api.web3forms.com/submit" method="POST" class="styled-form">
+                                <input type="hidden" name="access_key" value="9aa4c03f-af54-404b-b9f9-ecf3e5fa28b5" />
+                                <div class="form-group">
+                                    <label for="name">Name</label>
+                                    <input type="text" id="name" name="Name" required />
+                                </div>
+                                <div class="form-group">
+                                    <label for="email">Email</label>
+                                    <input type="email" id="email" name="email" required />
+                                </div>
+                                <div class="form-group">
+                                    <label for="message">Message</label>
+                                    <textarea id="message" name="Message" rows="5" required></textarea>
+                                </div>
+                                <input type="checkbox" name="botcheck" class="hidden" style="display: none" />
+                                <button type="submit" class="button">Send</button>
+                            </form>
+                            <div class="social-link-list">
+                                <a
+                                    href="mailto:sabrina.guittard@longfort-consulting.com"
+                                    class="social-link"
+                                    ><i class="fa-solid fa-envelope"></i> email</a>
+                                <a
+                                    href="https://www.linkedin.com/in/sabrina-guittard-3106272b"
+                                    target="_blank"
+                                    class="social-link"
+                                    >Linked<i class="fa-brands fa-linkedin"></i></a>
+                                <a href="tel:+33680012884" class="social-link"><i class="fa-brands fa-whatsapp"></i> +33 680012884</a>
+                            </div>
+                            <p class="text" style="margin-top: 20px">Longfort Consulting<br>Toulouse, France</p>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
@@ -202,9 +207,3 @@
         <script src="script.js"></script>
     </body>
 </html>
-
-
-
-
-
-
