--- a/index.html
+++ b/index.html
@@ -186,6 +186,14 @@
                     </div>
                 </div>
             </section>
+            <section id="blog" class="blog-section">
+                <div class="section-content">
+                    <h2 class="section-title">Blog</h2>
+                    <!-- Elfsight LinkedIn Feed | Untitled LinkedIn Feed -->
+                    <script src="https://elfsightcdn.com/platform.js" async></script>
+                    <div class="elfsight-app-37e8d025-f183-418a-832d-4a11719773ef" data-elfsight-app-lazy></div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <section class="footer-section">
@@ -207,3 +215,4 @@
         <script src="script.js"></script>
     </body>
 </html>
+
