--- a/index.html
+++ b/index.html
@@ -188,10 +188,12 @@
             </section>
             <section id="blog" class="blog-section">
                 <div class="section-content">
+                    <div class="about-details">
                     <h2 class="section-title">Blog</h2>
                     <!-- Elfsight LinkedIn Feed | Untitled LinkedIn Feed -->
                     <script src="https://elfsightcdn.com/platform.js" async></script>
                     <div class="elfsight-app-37e8d025-f183-418a-832d-4a11719773ef" data-elfsight-app-lazy></div>
+                    </div>        
                 </div>
             </section>
         </main>
@@ -215,4 +217,5 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
