--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             </div>
         </section>
         <section id="blog" class="about-section">
-            <div class="section-content">
+            <div class="blog-content">
                 <div class="about-details">
                     <h2 class="section-title">Blog</h2>
                     <!-- Elfsight LinkedIn Feed | Untitled LinkedIn Feed -->
@@ -208,4 +208,5 @@
 </body>
 
 </html>
+
 
