--- a/index.html
+++ b/index.html
@@ -188,17 +188,15 @@
         <section class="footer-section">
             <div>
                 <div class="footer">
-                    <a>&#x1F539;</a>
+                    <a>&#129516;</a>
                     <a style="color: #3b3737" href="LegalNotice.html">Mentions Légales</a>
                     <a>|</a>
-                    <a>Copyright©</a>
+                    <a>Longfort Consulting Copyright© 2025</a>
                     <a>|</a>
-                    <a>Longfort Consulting</a>
-                    <a>|</a>
-                    <a>&#127850;Cookie-free</a>
+                    <a>&#127850;Cookie free</a>
                     <a>|</a>
                     <a>&#x1F33F;0.2g CO²/visit</a>
-                    <a>&#x1F539;</a>
+                    <a>&#128138;</a>
                 </div>
             </div>
         </section>
@@ -207,6 +205,7 @@
 </body>
 
 </html>
+
 
 
 
