--- a/LegalNotice.html
+++ b/LegalNotice.html
@@ -16,13 +16,13 @@
             <div class="about-details">
                 <h2 class="section-title">Informations légales:</h2>
                 <p><br><b>Dénomination sociale:</b> Longfort consulting</p>
-                <p><b>Status juridique:</b> Société par actions simplifiée</p>
+                <p><b>Status juridique:</b> Société par Actions Simplifiée Unipersonnelle</p>
                 <p><b>SIRET:</b> 98827651500018</p>
                 <p><b>Numéro de TVA:</b> FR16988276515</p>
-                <p><b>Adresse:</b> 2 pl. Octave Sage, 31100 Toulouse, France</p>
+                <p><b>Adresse:</b> 2 place Octave Sage, 31100 Toulouse, France</p>
                 <p><b>n° de téléphone:</b> +33 6 80 01 28 84</p>
                 <p><b>Responsable de publication:</b> Sabrina Guittard</p>
-                <p><b>Activité:</b> Conseil pour la recherche clinique</p>
+                <p><b>Activité:</b> Conseil en recherche clinique</p>
             </div>
         </div>
     </section>
