--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <h2 class="section-title">Services</h2>
                     <div>
                         <div style="padding: 32px 0 8px 10px">
-                            <a class="text" style="font-size: 1.2rem; color: #3d7489">Regulatory Affairs strategy</a>
+                            <a class="text" style="font-size: 1.2rem; color: #3d7489">Regulatory Strategy</a>
                         </div>
                         <div style="padding: 0 0 0px 10px">
                             <a class="text">&#9634; Worldwide Submissions</a>
@@ -92,7 +92,7 @@
                         </div>
                         <div style="padding: 0 0 8px 10px">
                             <a class="text" style="font-size: 1.2rem; color: #3d7489">
-                                Operational coord. (Trial Start-up)
+                                Operational Coord. (Trial Start-up)
                             </a>
                         </div>
                         <div style="padding: 0 0 0px 10px">
