--- a/LegalNotice.html
+++ b/LegalNotice.html
@@ -20,7 +20,7 @@
                 <p><b>SIRET:</b> 98827651500018</p>
                 <p><b>Numéro de TVA:</b> FR16988276515</p>
                 <p><b>Adresse:</b> 2 place Octave Sage, 31100 Toulouse, France</p>
-                <p><b>n° de téléphone:</b> +33 6 80 01 28 84</p>
+                <p><b>n° de téléphone:</b> +33 (0)6 52 50 24 98</p>
                 <p><b>Responsable de publication:</b> Sabrina Guittard</p>
                 <p><b>Activité:</b> Conseil en recherche clinique</p>
             </div>
