--- a/index.html
+++ b/index.html
@@ -46,10 +46,12 @@
     </header>
     <main class="main">
         <!-- About section -->
+        <section id="blank" class="about-section">
+        </section>
         <section id="about" class="about-section">
             <div class="section-content">
                 <div class="about-image-wrapper">
-                    <img src="ressources/image.webp"
+                    <img id="SciImg" src="ressources/image.webp"
                         alt="Two scientists in a lab coat reviewing documents, with 'Clinical Trial' and related icons overlaid."
                         class="about-image" />
                 </div>
@@ -60,8 +62,8 @@
                         timely and quality-controlled manner.
                     </p>
                     <p class="text">
-                        Benefit from our <b>guidance</b> in oncology, immunotherapy, rare diseases, pediatrics, and
-                        gene therapy to achieve <b>successful</b> trial outcomes.
+                        Benefit from our guidance in oncology, immunotherapy, rare diseases, pediatrics, and
+                        gene therapy to achieve successful trial outcomes.
                     </p>
                     <p class="text">
                         Conduct robust <b>clinical trials</b> using <b>bulletproof</b> protocols and a tailored
@@ -165,10 +167,10 @@
                                     class="fa-solid fa-envelope"></i> email</a>
                             <a href="https://www.linkedin.com/in/sabrina-guittard-3106272b" target="_blank"
                                 class="social-link">Linked<i class="fa-brands fa-linkedin"></i></a>
-                            <a href="tel:+33680012884" class="social-link"><i class="fa-brands fa-whatsapp"></i> +33
-                                680012884</a>
+                            <a href="tel:+33652502498" class="social-link"><i class="fa-brands fa-whatsapp"></i>+33
+                                652502498</a>
                         </div>
-                        <p class="text" style="margin-top: 20px">Longfort Consulting<br>Toulouse, France</p>
+                        <p class="text" style="margin-top: 20px">Longfort Consulting - Toulouse, France</p>
                     </div>
                 </div>
             </div>
