--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                             <a href="tel:+33652502498" class="social-link"><i class="fa-brands fa-whatsapp"></i>+33
                                 652502498</a>
                         </div>
-                        <p class="text" style="margin-top: 20px">Longfort Consulting - Toulouse, France</p>
+                        <p class="text">Longfort Consulting - Toulouse, France</p>
                     </div>
                 </div>
             </div>
