--- a/LegalNotice.html
+++ b/LegalNotice.html
@@ -15,14 +15,14 @@
         <div class="section-content">
             <div class="about-details">
                 <h2 class="section-title">Informations légales:</h2>
-                <p><br><b>Dénomination sociale:</b> Longfort consulting</p>
-                <p><b>Status juridique:</b> Société par Actions Simplifiée Unipersonnelle</p>
-                <p><b>SIRET:</b> 98827651500018</p>
-                <p><b>Numéro de TVA:</b> FR16988276515</p>
-                <p><b>Adresse:</b> 2 place Octave Sage, 31100 Toulouse, France</p>
-                <p><b>n° de téléphone:</b> +33 (0)6 52 50 24 98</p>
-                <p><b>Responsable de publication:</b> Sabrina Guittard</p>
-                <p><b>Activité:</b> Conseil en recherche clinique</p>
+                <p><br>Dénomination sociale: Longfort consulting</p>
+                <p>Status juridique: Société par Actions Simplifiée Unipersonnelle</p>
+                <p>SIRET: 98827651500018</p>
+                <p>Numéro de TVA: FR16988276515</p>
+                <p>Adresse: 2 place Octave Sage, 31100 Toulouse, France</p>
+                <p>n° de téléphone: +33 (0)6 52 50 24 98</p>
+                <p>Responsable de publication: Sabrina Guittard</p>
+                <p>Activité: Conseil en recherche clinique</p>
             </div>
         </div>
     </section>
