--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                                     class="fa-solid fa-envelope"></i> email</a>
                             <a href="https://www.linkedin.com/in/sabrina-guittard-3106272b" target="_blank"
                                 class="social-link">Linked<i class="fa-brands fa-linkedin"></i></a>
-                            <a href="tel:+33652502498" class="social-link"><i class="fa-brands fa-whatsapp"></i>+33
+                            <a href="tel:+33652502498" class="social-link"><i class="fa fa-phone"></i>+33
                                 652502498</a>
                         </div>
                         <p class="text">Longfort Consulting - Toulouse, France</p>
