--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </p>
                     <p class="text">
                         Benefit from our guidance in oncology, immunotherapy, rare diseases, pediatrics, and
-                        gene therapy to achieve successful trial outcomes.
+                        gene therapy to reach successful trial outcomes.
                     </p>
                     <p class="text">
                         Conduct robust <b>clinical trials</b> using <b>bulletproof</b> protocols and a tailored
