--- a/index.html
+++ b/index.html
@@ -141,6 +141,10 @@
             <div class="section-content">
                 <div class="about-details">
                     <h2 class="section-title">Contact</h2>
+                    <!--<button popovertarget="pop-up">
+                    test bouton pop-up
+                    </button>
+                    <div popover id="pop-up">test</div>-->
                     <div>
                         <p class="text">
                             Have a question? Please fill out the form below, or feel free to contact me directly.
@@ -157,7 +161,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="message">Message</label>
-                                <textarea id="message" name="Message" rows="5" required></textarea>
+                                <textarea id="message" name="Message" rows="5" required contenteditable="true">I am interested in your services and would like to schedule a call.</textarea>
                             </div>
                             <input type="checkbox" name="botcheck" class="hidden" style="display: none" />
                             <button type="submit" class="button">Send</button>
@@ -190,12 +194,9 @@
         <section class="footer-section">
             <div>
                 <div class="footer">
-                    <a style="color: #3b3737" href="LegalNotice.html">Mentions Légales</a>
-                    <a>|</a>
-                    <a>Longfort Consulting Copyright© 2025</a>
-                    <a>|</a>
-                    <a>&#127850;Cookie free</a>
-                    <a>|</a>
+                    <a>© 2025 Longfort Consulting</a><a>|</a>
+                    <a style="color: #3b3737" href="LegalNotice.html">Legal notice</a><a>|</a>
+                    <a>&#127850;Cookie-free</a><a>|</a>
                     <a>&#x1F33F;0.2g CO²/visit</a>
                 </div>
             </div>
@@ -203,10 +204,4 @@
     </footer>
     <script src="script.js"></script>
 </body>
-
 </html>
-
-
-
-
-
