--- a/index.html
+++ b/index.html
@@ -84,13 +84,16 @@
                             <a class="text" style="font-size: 1.2rem; color: #3d7489">Regulatory Strategy</a>
                         </div>
                         <div style="padding: 0 0 0px 10px">
-                            <a class="text">&#9634; Worldwide Submissions</a>
+                            <a class="text">&#9634; Worldwide Submissions</a>                            
                         </div>
                         <div style="padding: 0 0 0px 10px">
                             <a class="text">&#9634; Complex Trial Strategy</a>
                         </div>
                         <div style="padding: 0 0 28px 10px">
                             <a class="text">&#9634; Readiness Audits</a>
+                            <a href="ressources/fichier-exemple.pdf" target="_blank" title="Open pdf file" class="pdf-link">
+                                <i class="fa-solid fa-link"></i>
+                            </a>
                         </div>
                         <div style="padding: 0 0 8px 10px">
                             <a class="text" style="font-size: 1.2rem; color: #3d7489">
@@ -184,8 +187,8 @@
                 <div class="about-details">
                     <h2 class="section-title">Blog</h2>
                     <!-- Elfsight LinkedIn Feed | Untitled LinkedIn Feed -->
-                    <script src="https://elfsightcdn.com/platform.js" async></script>
-                    <div class="elfsight-app-37e8d025-f183-418a-832d-4a11719773ef" data-elfsight-app-lazy></div>
+                    <!--<script src="https://elfsightcdn.com/platform.js" async></script>
+                    <div class="elfsight-app-37e8d025-f183-418a-832d-4a11719773ef" data-elfsight-app-lazy></div>-->
                 </div>
             </div>
         </section>
@@ -202,6 +205,9 @@
             </div>
         </section>
     </footer>
+    <a href="#about" class="button fixed-scroll-button" aria-label="Scroll to Top">
+        &uarr; Go to top
+    </a>
     <script src="script.js"></script>
 </body>
 </html>
