--- a/LegalNotice.html
+++ b/LegalNotice.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
-    <section class="about-section" style="padding: 24px 24px 24px 24px;text-transform: uppercase;font-size: 2rem;">
+    <section id="top" class="about-section" style="padding: 24px 24px 24px 24px;text-transform: uppercase;font-size: 2rem;">
         <a href="index.html" class="section-title" style="vertical-align: baseline;color:#3b3737;text-decoration: none;"> &larr; Back</a>
     </section>
     <section class="about-section">
@@ -61,5 +61,8 @@
         </div>
     </section>
     <section class="about-section"></section>
+        <a href="#top" class="button fixed-scroll-button" aria-label="Scroll to Top">
+        &uarr; Go to top
+    </a>
     </body>
 </html>
