--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
                 <div class="about-details">
                     <h2 class="section-title">Blog</h2>
                     <!-- Elfsight LinkedIn Feed | Untitled LinkedIn Feed -->
-                    <!--<script src="https://elfsightcdn.com/platform.js" async></script>
-                    <div class="elfsight-app-37e8d025-f183-418a-832d-4a11719773ef" data-elfsight-app-lazy></div>-->
+                    <script src="https://elfsightcdn.com/platform.js" async></script>
+                    <div class="elfsight-app-37e8d025-f183-418a-832d-4a11719773ef" data-elfsight-app-lazy></div>
                 </div>
             </div>
         </section>
