--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
     Benefit from our guidance in oncology, immunotherapy, rare diseases, pediatrics, and gene therapy to achieve successful trial outcomes.
     Conduct robust clinical trials using bulletproof protocols and a tailored document set to obtain first-time approval from regulatory authorities."/>
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <!-- linking font awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
     <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-    <!-- Header / Navbar -->
     <header>
         <nav class="navbar section-content">
             <a href="#" class="nav-logo">
@@ -45,7 +43,6 @@
         </nav>
     </header>
     <main class="main">
-        <!-- About section -->
         <section id="blank" class="about-section">
         </section>
         <section id="about" class="about-section">
@@ -89,11 +86,14 @@
                         <div style="padding: 0 0 0px 10px">
                             <a class="text">&#9634; Complex Trial Strategy</a>
                         </div>
-                        <div style="padding: 0 0 28px 10px">
+                        <div style="padding: 0 0 28px 10px; position: relative;">
                             <a class="text">&#9634; Readiness Audits</a>
-                            <a href="ressources/fichier-exemple.pdf" target="_blank" title="Open pdf file" class="pdf-link">
+                            <a href="ressources/RegulatoryFlashAudit.pdf" target="_blank" title="Open pdf file" class="pdf-link">
                                 <i class="fa-solid fa-link"></i>
                             </a>
+                            <div class="slide-popup">
+                                <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSUmzu-xV3Vy7etL4FhXwzklRkQWEXqosHg8JSRM6fRxDvfCPZKiLdI9vHjD0OY_SXk6oDK5utPHuXq/pubembed?start=false&loop=false&delayms=3000" frameborder="0" width="325" height="458" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                            </div>
                         </div>
                         <div style="padding: 0 0 8px 10px">
                             <a class="text" style="font-size: 1.2rem; color: #3d7489">
@@ -144,10 +144,6 @@
             <div class="section-content">
                 <div class="about-details">
                     <h2 class="section-title">Contact</h2>
-                    <!--<button popovertarget="pop-up">
-                    test bouton pop-up
-                    </button>
-                    <div popover id="pop-up">test</div>-->
                     <div>
                         <p class="text">
                             Have a question? Please fill out the form below, or feel free to contact me directly.
@@ -186,7 +182,6 @@
             <div class="blog-content">
                 <div class="about-details">
                     <h2 class="section-title">Blog</h2>
-                    <!-- Elfsight LinkedIn Feed | Untitled LinkedIn Feed -->
                     <script src="https://elfsightcdn.com/platform.js" async></script>
                     <div class="elfsight-app-37e8d025-f183-418a-832d-4a11719773ef" data-elfsight-app-lazy></div>
                 </div>
