--- a/index.html
+++ b/index.html
@@ -120,6 +120,12 @@
                         </div>
                         <div style="padding: 0 0 0px 10px">
                             <a class="text">&#9634; Start-up Project Support</a>
+                            <a href="ressources/Booster.pdf" target="_blank" title="Open pdf file" class="pdf-link">
+                                <i class="fa-solid fa-link"></i>
+                            </a>
+                            <div class="slide-popup">
+                            <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRJQhiVrElsQBSmCxALBeb-Pz8xqZsNoDJ2PvJ7parxiVvHWNjiGz5TbjVow8tToKGTCjwdDcCYkZZx/pubembed?start=false&loop=false&delayms=3000" frameborder="0" width="397" height="588" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                            </div>
                         </div>
                         <div style="padding: 0 0 0px 10px">
                             <a class="text">&#9634; Clinical Operations Assessment</a>
@@ -206,4 +212,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
